# embedded-fps

./: Cargo.toml  README.md
examples/: eg_recording.rs  embedded_graphics.rs  fps_counter.rs
src/: fps.rs  lib.rs  std_clock.rs
