[package]
name = "embedded-fps"
version = "0.1.0"
authors = ["Lechev.space <dev@lechev.space>", "Lachezar Lechev"]
description = "Frames Per Second counter for embedded devices"
categories = ["embedded", "no-std", "graphics"]

keywords = ["graphics", "embedded", "no_std", "frames-per-second", "fps"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LechevSpace/embedded-fps"
documentation = "https://docs.rs/embedded-fps"
homepage = "https://github.com/LechevSpace/embedded-fps"

edition = "2021"

# Edition 2021 requires at least 1.56
rust-version = "1.56"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]

default = []
std = []

[[example]]
name = "fps_counter"
required-features = ["std"]

[[example]]
name = "embedded_graphics"
required-features = ["std"]

[[example]]
# This example is meant to ease the recording of the window for the GIF in the docs
name = "eg_recording"
required-features = ["std"]

[dependencies]
embedded-time = "0.12"
heapless = {version = "0.7", default-features = false }

[dev-dependencies]
# used for the `embedded-graphics` example
embedded-graphics-simulator = "0.3"
embedded-graphics = "0.7"